# CS229

./: CMakeLists.txt  FLAT_CLOTH_TEST.h  GRID_TEST.h  README.md  create_axial_bending_springs.cpp  reconstruct_extrapolation.cpp  texture_extrapolation_diffusion.cpp
data_generation/script/: add_tex_to_model.py  camera_test.py  cudaqs_utils.py  dataset_generation_lowres.sh  dataset_lowres.py  dataset_lowres_new.py  displacement_gen.py  draw_obj_utils.py  extract_side.py  generate_network_disp.py  io_utils.py  mass_utils.py  obj_io.py  obj_utils.py  occlude.py  process-new.sh  process-subdiv.sh  reconstruct_test.py  recover_texcoord.py  replace_texture.py  replace_texture_dir.py  set_blender_frames.py  subdiv_flat.py  subdivision.py  texcoord_est.py  texcoord_est_new.py
pixel_network/Scripts/Data_Processing/: PSpincalc.py  body_angle_limits.py  bone_utils.py  check_broken_files.py  collect_obj.py  compress_npys.py  compute_area_stats.py  compute_edge_lengths.py  compute_edge_stats.py  compute_energy_stats.py  compute_loss_stats.py  compute_offset.py  convert_uvn.py  convert_variable_m_model.py  draw_edges.py  draw_m.py  gen_hero_sample_list.py  gen_sample_list.py  joint_sdk_utils.py  lap_utils.py  make_rotation_matrices.py  mass_utils.py  merge_and_compress_uvn_npys.py  merge_uvn_hat_imgs.py  normal_utils.py  npy_to_obj.py  npy_to_skin_tshirts.py  obj2tri.py  obj_collecter.py  obj_folder_vlzer.py  obj_io.py  offset_img_process.py  offset_img_stats.py  offset_io_utils.py  offset_vlz_utils.py  patch_io_utils.py  physbam_example.py  plot_log.py  ply_io.py  rasterize_utils.py  (+31 more)
pixel_network/Scripts/Train_Conv_Mix/: acgan_regress_utils.py  acgan_utils.py  cg_solve.py  conv_decoder.py  ctx_utils.py  cudaqs_func.py  cvxpy_opt.py  cvxpy_opt_func.py  debug_utils.py  ecos_opt_func.py  ffmpeg_video.py  file_logger.py  gan_loss_utils.py  generate_test.py  generate_test_args.py  hero_data_loader.py  image_dataset_utils.py  img_opt.py  img_sample_func.py  inequality_opt.py  logger.py  loss_utils.py  mesh_opt.py  mix_data_loader.py  odenet_utils.py  offset_img_utils.py  patch_utils.py  progressive_gan_utils.py  run_patches.py  spring_opt.py  spring_opt_func.py  style_gan_utils.py  topo_utils.py  train_acgan.py  train_conv.py  train_odenet.py  train_odenet_utils.py  train_progressive_gan.py  train_progressive_gan_utils.py  train_utils.py  (+2 more)
pixel_network/Scripts/Train_Conv_Mix/acos/: CMakeLists.txt  acos.h  cone_data.h  glblopts.h  kkt_data.h  pwork.cpp  pwork.h  solver.cpp  solver.h
pixel_network/Scripts/Train_Conv_Mix/acos/la/: la_eigen.cpp  la_eigen.h
pixel_network/Scripts/Train_Conv_Mix/acos/solvers/: kkt_base.h
pixel_network/Scripts/Train_Conv_Mix/acos/solvers/kkt_cg_eigen/: kkt_cg_eigen.cpp  kkt_cg_eigen.h  policy_cg_eigen.h  pwork_cg_eigen.h  system_cg_eigen.cpp  system_cg_eigen.h
pixel_network/Scripts/Train_Conv_Mix/acos/solvers/kkt_ldl_2x2/: kkt_ldl_2x2.cpp  kkt_ldl_2x2.h  pwork_ldl_2x2.h
pixel_network/Scripts/Train_Conv_Mix/acos/solvers/kkt_ldl_3x3/: kkt_ldl_3x3.cpp  kkt_ldl_3x3.h  pwork_ldl_3x3.h
pixel_network/Scripts/Train_Conv_Mix/acos/solvers/kkt_ldl_3x3/impl/: cone.cpp  cone.h  kkt.cpp  kkt.h  spla.cpp  spla.h  splamm.cpp  splamm.h
pixel_network/Scripts/Train_Conv_Mix/acos/tests/src/: forward_opt.cpp  forward_opt.h  io_utils.cpp  io_utils.h  test_cloth.cpp
pixel_network/Scripts/Train_Conv_Mix/cfgs/: channelsD_v1.txt  channelsD_v2.txt  channelsD_v3.txt  channelsD_v4.txt  channelsG_v2.txt
pixel_network/Scripts/Train_Conv_Mix/cudaqs/: CMakeLists.txt  setup.py
pixel_network/Scripts/Train_Conv_Mix/cudaqs/include/: CMakeLists.txt
pixel_network/Scripts/Train_Conv_Mix/cudaqs/include/ctpl/: CMakeLists.txt
pixel_network/Scripts/Train_Conv_Mix/cudaqs/scripts/: clean_and_compile.sh
pixel_network/Scripts/Train_Conv_Mix/cudaqs/src/: CMakeLists.txt  backward_opt.cpp  backward_opt.h  cg_solve.cpp  cg_solve.h  cudaqs.cpp  cudaqs.h  cudaqs_backward.cpp  cudaqs_cuda_kernel.cu  cudaqs_forward.cpp  cudaqs_global.h  cudaqs_python.cpp  cudaqs_utils.cu  cudaqs_utils.h  newton_opt.cpp  newton_opt.h  opt_data.cpp  opt_data.h  spring_system.cu  spring_system.h  tensor.cu  tensor.h
pixel_network/Scripts/Train_Conv_Mix/cudaqs/tests/: cpp_test.sh  io_utils.cpp  io_utils.h  python_test.sh  show.py  test.cpp  test.py  test_backward.cu  test_forward.cu  test_interface.cu
pixel_network/Scripts/Train_Conv_Mix/cvx_opt_cpp/: CMakeLists.txt  backward_opt.cpp  backward_opt.h  ctpl_stl.h  cvx_opt.cpp  cvx_opt_backward.cpp  cvx_opt_forward.cpp  cvx_opt_global.h  cvx_opt_py.cpp  cvx_opt_utils.cpp  ecos_opt.cpp  ecos_opt.h  forward_opt.cpp  forward_opt.h  main.cpp  setup.py  test.py
pixel_network/Scripts/Train_Conv_Mix/cvx_opt_cpp/tests/src/: io_utils.cpp  io_utils.h  test_backward.cpp  test_forward.cpp
pixel_network/Scripts/Train_Conv_Mix/ecos/: CMakeLists.txt  ecos.mk
pixel_network/Scripts/Train_Conv_Mix/ecos/ecos_bb/: ecos_bb_preproc.c
pixel_network/Scripts/Train_Conv_Mix/ecos/include/: ecos.h  full_sym_grad.h  glblopts.h  kkt.h  kkt_lu.h
pixel_network/Scripts/Train_Conv_Mix/ecos/src/: ecos.c  full_sym_grad.c  kkt.c  kkt_lu.cpp  preproc.c  runecos.c  runecos_exp.c  timer.c
pixel_network/Scripts/Train_Conv_Mix/ecos/test/: README.md
pixel_network/Scripts/Train_Conv_Mix/ecos/test/LPnetlib/: lp_25fv47.h  lp_adlittle.h  lp_afiro.h  lp_agg.h  lp_agg2.h  lp_agg3.h  lp_bandm.h  lp_beaconfd.h  lp_blend.h  lp_bnl1.h
pixel_network/Scripts/Train_Conv_Mix/ecos/test/MPC/: MPC02.h
pixel_network/Scripts/Train_Conv_Mix/ecos/test/exponential/: num_err.h  random_feasible.h  random_infeasible.h  random_unbounded.h
pixel_network/Scripts/Train_Conv_Mix/ecos/test/infeasibleProblems/: infeasible1.h
pixel_network/Scripts/Train_Conv_Mix/ecos/test/qcml/: README.md
pixel_network/Scripts/Train_Conv_Mix/ecos/test/unboundedProblems/: unboundedLP1.h  unboundedMaxSqrt.h
